--- a/package.json
+++ b/package.json
@@ -1,11 +1,11 @@
 {
   "name": "react-mangosteen-1",
-  "private": true,
-  "version": "0.0.0",
   "type": "module",
+  "version": "0.0.0",
+  "private": true,
   "scripts": {
     "dev": "vite",
-    "build": "tsc && vite build",
+    "build": "tsc && vite build --base=react-mangosteen_preview",
     "preview": "vite preview",
     "lint": "eslint .",
     "lint:fix": "eslint . --fix"
@@ -23,6 +23,6 @@
     "@vitejs/plugin-react": "2.1.0",
     "eslint": "8.39.0",
     "typescript": "4.6.4",
-    "vite": "3.1.0"
+    "vite": "3.1.8"
   }
 }
