--- a/package.json
+++ b/package.json
@@ -14,7 +14,8 @@
     "@react-spring/web": "9.7.2",
     "react": "18.2.0",
     "react-dom": "18.2.0",
-    "react-router-dom": "6.10.0"
+    "react-router-dom": "6.4.2",
+    "yarn": "1.22.19"
   },
   "devDependencies": {
     "@antfu/eslint-config": "0.38.5",
@@ -22,7 +23,9 @@
     "@types/react-dom": "18.0.6",
     "@vitejs/plugin-react": "2.1.0",
     "eslint": "8.39.0",
+    "sass": "1.66.1",
     "typescript": "4.6.4",
+    "unocss": "0.45.30",
     "vite": "3.1.8"
   }
 }
