--- a/package.json
+++ b/package.json
@@ -15,7 +15,8 @@
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-router-dom": "6.4.2",
-    "yarn": "1.22.19"
+    "yarn": "1.22.19",
+    "zustand": "4.4.1"
   },
   "devDependencies": {
     "@antfu/eslint-config": "0.38.5",
