--- a/package.json
+++ b/package.json
@@ -12,9 +12,12 @@
   },
   "dependencies": {
     "@react-spring/web": "9.7.2",
+    "axios": "1.1.3",
+    "mockjs": "1.1.0",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-router-dom": "6.4.2",
+    "swr": "2.2.2",
     "yarn": "1.22.19",
     "zustand": "4.4.1"
   },
@@ -27,6 +30,7 @@
     "sass": "1.66.1",
     "typescript": "4.6.4",
     "unocss": "0.45.30",
-    "vite": "3.1.8"
+    "vite": "3.1.8",
+    "vite-plugin-mock": "2.9.6"
   }
 }
