--- a/package.json
+++ b/package.json
@@ -28,9 +28,11 @@
     "@vitejs/plugin-react": "2.1.0",
     "eslint": "8.39.0",
     "sass": "1.66.1",
+    "svgo": "3.0.1",
+    "svgstore": "3.0.1",
     "typescript": "4.6.4",
     "unocss": "0.45.30",
-    "vite": "3.1.8",
+    "vite": "4.4.9",
     "vite-plugin-mock": "2.9.6"
   }
 }
