--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "@types/react": "18.0.17",
     "@types/react-dom": "18.0.6",
     "@vitejs/plugin-react": "2.1.0",
+    "classnames": "2.3.2",
     "eslint": "8.39.0",
     "sass": "1.66.1",
     "svgo": "3.0.1",
