--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "classnames": "2.3.2",
     "eslint": "8.39.0",
     "sass": "1.66.1",
+    "styled-components": "6.0.7",
     "svgo": "3.0.1",
     "svgstore": "3.0.1",
     "typescript": "4.6.4",
