--- a/.eslintrc
+++ b/.eslintrc
@@ -6,6 +6,7 @@
     "eslint-disable no-console": "off",
     "arrow-parens": "off",
     "eslint-disable-next-line": "off",
-    "max-statements-per-line": "off"
+    "max-statements-per-line": "off",
+    "antfu/top-level-function": "off"
   }
 }
