--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "react-dom": "18.2.0",
     "react-router-dom": "6.4.2",
     "swr": "2.2.2",
+    "vh-check": "2.0.5",
     "yarn": "1.22.19",
     "zustand": "4.4.1"
   },
