--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "@types/react-dom": "18.0.6",
     "@vitejs/plugin-react": "2.1.0",
     "classnames": "2.3.2",
+    "echarts": "^5.4.3",
     "eslint": "8.39.0",
     "sass": "1.66.1",
     "styled-components": "6.0.7",
