--- a/.eslintrc
+++ b/.eslintrc
@@ -3,6 +3,7 @@
   "rules": {
     "curly": "off",
     "@typescript-eslint/comma-dangle": "off",
+    "@typescript-eslint/brace-style": "off",
     "eslint-disable no-console": "off",
     "arrow-parens": "off",
     "eslint-disable-next-line": "off",
