--- a/.eslintrc
+++ b/.eslintrc
@@ -10,6 +10,7 @@
     "max-statements-per-line": "off",
     "antfu/top-level-function": "off",
     "@typescript-eslint/consistent-type-definitions": "off",
-    "@typescript-eslint/no-use-before-define": "off"
+    "@typescript-eslint/no-use-before-define": "off",
+    "no-mixed-operators": "off"
   }
 }
