--- a/react-mangosteen/package.json
+++ b/react-mangosteen/package.json
@@ -31,6 +31,7 @@
     "eslint-plugin-react-hooks": "4.6.0",
     "eslint-plugin-react-refresh": "0.4.6",
     "sass": "1.77.8",
+    "styled-components": "6.1.12",
     "svgo": "3.0.1",
     "svgstore": "3.0.1",
     "typescript": "5.2.2",
