--- a/react-mangosteen/package.json
+++ b/react-mangosteen/package.json
@@ -10,10 +10,12 @@
     "dev": "vite",
     "build": "tsc && vite build",
     "lint": "eslint . --ext ts,tsx --report-unused-disable-directives --max-warnings 0",
+    "lint-fix": "eslint --fix --ext .js,.ts,.tsx ./",
     "preview": "vite preview"
   },
   "dependencies": {
     "@react-spring/web": "9.7.3",
+    "classnames": "2.5.1",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-router-dom": "6.23.1",
@@ -26,12 +28,10 @@
     "@typescript-eslint/eslint-plugin": "7.2.0",
     "@typescript-eslint/parser": "7.2.0",
     "@vitejs/plugin-react": "4.2.1",
-    "classnames": "2.5.1",
     "eslint": "8.57.0",
     "eslint-plugin-react-hooks": "4.6.0",
     "eslint-plugin-react-refresh": "0.4.6",
     "sass": "1.77.8",
-    "styled-components": "6.1.12",
     "svgo": "3.0.1",
     "svgstore": "3.0.1",
     "typescript": "5.2.2",
