--- a/react-mangosteen/package.json
+++ b/react-mangosteen/package.json
@@ -19,6 +19,7 @@
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-router-dom": "6.23.1",
+    "swr": "2.2.5",
     "yarn": "1.22.22",
     "zustand": "4.5.4"
   },
