--- a/react-mangosteen/package.json
+++ b/react-mangosteen/package.json
@@ -15,6 +15,7 @@
   },
   "dependencies": {
     "@react-spring/web": "9.7.3",
+    "axios": "1.7.2",
     "classnames": "2.5.1",
     "react": "18.2.0",
     "react-dom": "18.2.0",
