--- a/react-mangosteen/package.json
+++ b/react-mangosteen/package.json
@@ -22,6 +22,7 @@
     "react-router-dom": "6.23.1",
     "styled-components": "^6.1.12",
     "swr": "2.2.5",
+    "vh-check": "^2.0.5",
     "yarn": "1.22.22",
     "zustand": "4.5.4"
   },
